<resources>

    <string name="app_name">LifeSync</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_life_sync">LifeSync</string>
    <string name="title_activity_schedule">ScheduleActivity</string>
    <string name="main_no_items">No items</string>
    <string name="editTxtEmail">Email</string>
    <string name="editTxtPassword">Password</string>
    <string name="btnLogin">Login</string>
    <string name="txtNoAccount">No account? Register!</string>
    <string name="editTxtFirstName">First Name</string>
    <string name="editTxtLastName">Last Name</string>
    <string name="btnRegister">Register</string>
    <string name="dialogDuplicateEmail">Email already exists. Please login or use another email.</string>
    <string name="ok">OK</string>
    <string name="dialogAccountCreated">Your account has been created. You may now login and create a new schedule.</string>   
    <string-array name="day_of_week">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>
    <string-array name="time_of_day">
        <item>00:00</item>
        <item>01:00</item>
        <item>02:00</item>
        <item>03:00</item>
        <item>04:00</item>
        <item>05:00</item>
        <item>06:00</item>
        <item>07:00</item>
        <item>08:00</item>
        <item>09:00</item>
        <item>10:00</item>
        <item>11:00</item>
        <item>12:00</item>
        <item>13:00</item>
        <item>14:00</item>
        <item>15:00</item>
        <item>16:00</item>
        <item>17:00</item>
        <item>18:00</item>
        <item>19:00</item>
        <item>20:00</item>
        <item>21:00</item>
        <item>22:00</item>
        <item>23:00</item>
    </string-array>
        <string name="editTxtConfirmPassword">Confirm Password</string>
        <string name="dialogLoggingOut">Are you sure you want to log out?</string>
        <string name="cancel">Cancel</string>
        <string name="sundayShort">Sun</string>
        <string name="mondayShort">Mon</string>
        <string name="tuesdayShort">Tue</string>
        <string name="wednesdayShort">Wed</string>
        <string name="thursdayShort">Thur</string>
        <string name="fridayShort">Fri</string>
        <string name="saturdayShort">Sat</string>
        <string name="name">Name</string>
        <string name="from">FROM</string>
        <string name="to">TO</string>
        <string name="location">"Location "</string>
        <string name="description">Description</string>
        <string name="startTime">Start Time</string>
        <string name="endTime">End Time</string>
        <string name="owner">Owner</string>
        <string name="disabled">Disabled</string>
        <string name="bump">Bump</string>
        <string name="bumpDetails">Bump to add your friend as a contact!</string>
        <string name="confirm">Confirm</string>
        <string name="deny">Deny</string>

</resources>