<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp" >

        <!-- Email TextField -->

        <EditText
            android:id="@+id/loginEmail"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:hint="@string/editTxtEmail"
			android:inputType="textEmailAddress"
            android:textSize="20sp" />

        <!-- Password TextField -->

        <EditText
            android:id="@+id/loginPassword"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:hint="@string/editTxtPassword"
            android:inputType="textPassword"
            android:textSize="20sp" />

        <!-- Login Button -->

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:text="@string/btnLogin"
            android:textSize="20sp" />

        <!-- Link to Registration Screen -->

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@null"
            android:text="@string/txtNoAccount"
            android:textColor="#21dbd4"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

</ScrollView>