<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp" >

        <!-- Name Field -->

        <EditText
            android:id="@+id/event_name"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:hint="@string/name"
            android:textSize="20sp" />

        <!-- StartTime Field -->

        <TextView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:text="@string/from"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal" >

            <Spinner
                android:id="@+id/event_start_day_spinner"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1" />

            <Spinner
                android:id="@+id/event_start_time_spinner"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1" />

            <!--
        <EditText
            android:id="@+id/event_start_time"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:hint="Start Time"
            android:text="3-7"
            android:textSize="20sp" />
            -->

        </LinearLayout>

        <!-- EndTime Field -->

        <TextView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:text="@string/to"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal" >

            <Spinner
                android:id="@+id/event_end_day_spinner"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1" />

            <Spinner
                android:id="@+id/event_end_time_spinner"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1" />

            <!--
        <EditText
            android:id="@+id/event_end_time"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="7dp"
            android:hint="End Time"
            android:text="5-9"
            android:textSize="20sp" />
            -->

        </LinearLayout>

        <!-- Location Field -->

        <EditText
            android:id="@+id/event_location"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:hint="@string/location"
            android:textSize="20sp" />

        <!-- Description Field -->

        <EditText
            android:id="@+id/event_description"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:hint="@string/description"
            android:textSize="20sp" />
    </LinearLayout>

</ScrollView>